--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ spring.thymeleaf.suffix=.html
 # Mail Sender
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
-spring.mail.username=syg0662@naver.com
-spring.mail.password=)tl0fn8so2Rj7(
+spring.mail.username=
+spring.mail.password=
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
