--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,15 @@
 spring.profiles.active=prod
 server.port=11000
 
-
 # MariaDB
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://192.168.197.133:3306/myDB
+spring.datasource.url=jdbc:mariadb://192.168.72.137:3306/myDB
+#                                   ?? ??? ip : ????/??? ?
 spring.datasource.username=web_user
 spring.datasource.password=1234
 
-
 # DTO Location
 mybatis.type-aliases-package=kopo.poly.dto
-
 
 # SQL Query Location
 mybatis.mapper-locations=classpath:mapper/*.xml
@@ -24,14 +22,13 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-
-# Mail Sender
+#Mail Sender
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
-spring.mail.username=
-spring.mail.password=
+spring.mail.username= [??? ?? ??]
+spring.mail.password= [??? ?? ??? ????]
 spring.mail.default-encoding=UTF-8
-spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.outh=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.naver.com
