--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@ server.port=11000
 # MariaDB
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://192.168.72.137:3306/myDB
-#                                   ?? ??? ip : ????/??? ?
 spring.datasource.username=web_user
 spring.datasource.password=1234
 
@@ -25,8 +24,8 @@ spring.thymeleaf.suffix=.html
 #Mail Sender
 spring.mail.host=smtp.naver.com
 spring.mail.port=465
-spring.mail.username= [??? ?? ??]
-spring.mail.password= [??? ?? ??? ????]
+spring.mail.username=
+spring.mail.password=
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.outh=true
 spring.mail.properties.mail.smtp.starttls.enable=true
